# design-patterns-modern-cpp

./: .gitignore  LICENSE  README.md
01-SOLID/01-SRP/SRP_Demo/: CMakeLists.txt  main.cpp
01-SOLID/01-SRP/SRP_Demo/journal/: journal.cpp  journal.h  persistencemanager.cpp  persistencemanager.h
01-SOLID/02-OCP/: CMakeLists.txt
01-SOLID/02-OCP/Journal-SRP-OCP/: CMakeLists.txt  EXPLANATION.md  journal.cpp  journal.h  main.cpp
01-SOLID/02-OCP/Journal-SRP-OCP/persistence/: filepersistence.cpp  filepersistence.h  ipersistence.h  jsonpersistence.cpp  jsonpersistence.h
01-SOLID/02-OCP/ProductFilter/: CMakeLists.txt  EXPLANATION.md  main.cpp  sizespecification.cpp  sizespecification.h
01-SOLID/02-OCP/ProductFilter/filter/: betterfilter.cpp  betterfilter.h  filter.h
01-SOLID/02-OCP/ProductFilter/model/: product.cpp  product.h
01-SOLID/02-OCP/ProductFilter/specification/: andspecification.cpp  andspecification.h  colorspecification.cpp  colorspecification.h  specification.h
